--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -65,14 +65,16 @@ body {
     background-color: #e2e2e2;
     position: absolute;
     top:20%;
+    width: 700px;
     padding-bottom: 2%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 500px;
     border-radius: 5px;
     box-shadow: 5px 5px 10px;
+    max-height: 80vh; /* Máximo alto de la ventana, ajusta según sea necesario */
+    overflow-y: auto; /* Agrega desbordamiento vertical si se supera la altura */
   }
   .ventana-comanda{
     z-index: 2;
@@ -200,13 +202,14 @@ body {
 }
 
 
-table{
+table {
+  top: 0px;
   border-collapse: collapse;
-  width: 400px;
   border: 1px solid #ccc;
   margin: 10px;
+  max-height: 60vh; /* Máximo alto de la tabla, ajusta según sea necesario */
+  overflow-y: auto; /* Agrega desbordamiento vertical si se supera la altura */
 }
-
 th, td {
   border: 1px solid #ccc;
   padding: 8px;
